--- a/docs/code-quality/c6279.md
+++ b/docs/code-quality/c6279.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6279'
 title: C6279
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6279
 ms.assetid: 0af88b58-35df-456f-8c02-e8eeffe3b7de
-ms.openlocfilehash: a888f813a644791ace195bd6a8cd87cec848dc6c
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 62a9edc09012e2d772a58049e0281cf31f6423e1
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91501105"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97221436"
 ---
 # <a name="c6279"></a>C6279
 
@@ -59,6 +60,6 @@ void f( )
 
 Per evitare interamente questi tipi di problemi di allocazione, utilizzare i meccanismi forniti dalla libreria Standard Template Library (STL) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [C6014](../code-quality/c6014.md)
